[package]
name = "reckoner"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3.17"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version="1.0", features=["derive"] }
anyhow = "1.0.42"
serde_json = "1.0.64"
iex-provider = { path = "./crates/iex-provider" }

[build-dependencies]

[[bin]]
name = "reckoner"
path = "src/main.rs"
