[package]
name = "reckoner"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0.36"
futures = "0.3.21"
anyhow = "1.0.42"
serde_json = "1.0.64"
iex-provider = { path = "./crates/iex-provider" }
tokio = { version = "1.16.1", features = ["full"] }

[build-dependencies]

[[bin]]
name = "reckoner"
path = "src/main.rs"

[profile.dev]
opt-level = 3
