[package]
name = "iex-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version="1.0", features=["derive"] }
anyhow = "1.0.42"
serde_json = "1.0.64"
dotenv_codegen = "0.15.0"

[lib]
name = "iex_provider"
path = "src/lib.rs"
